finished updating quarto blogs blog

--- a/posts/2022-10-24-quarto-blogs/references.bib
+++ b/posts/2022-10-24-quarto-blogs/references.bib
@@ -1,6 +1,6 @@
 @misc{pileggi2021curating,
   author = {Pileggi, Shannon},
-  title = {PIPING HOT DATA: Curating for @WeAreRLadies on Twitter},
+  title = {Curating for @WeAreRLadies on Twitter},
   url = {https://www.pipinghotdata.com/posts/2021-09-23-curating-for-wearerladies-on-twitter/},
   year = {2021}
 }
@@ -56,9 +56,56 @@
 
 @online{csik2021,
   author = {Samantha Csik},
-  title = {Why Create Presentation Slides about Blogging When You Can
-    Just Blog about It Instead?},
+  title = {Why Create Presentation Slides about Blogging When You Can Just Blog about It Instead?},
   date = {2021-09-24},
   url = {https://samanthacsik.github.io/posts/2021-09-21-distill-blogs/},
+  langid = {en}
+}
+
+ @online{rapp2025, 
+  author = {Rapp, Albert}, 
+  title = {Comparing pipes: Base-R |> vs {magrittr} %>%}, 
+  date = {2025-01-12}, 
+  url = {https://albert-rapp.de/posts/31_pipes_compared/31_pipes_compared}, 
+  langid={en} 
+}
+
+ @online{barter2023, 
+  author = {Bartner, Rebecca}, 
+  title = {An introduction to Python for R Users}, 
+  date = {2023-09-12},
+  url = {https://rebeccabarter.com/blog/2023-09-11-from_r_to_python}, 
+  language={en} 
+}
+
+@online{gans2019, 
+  author = {Gans, Maya},
+  title = {My first live coding interview}, 
+  date = {2019-08-27},
+  url = {https://maya.rbind.io/posts/live-coding-interview/}, 
+  language = {en} 
+}
+
+@online{rennie2023, 
+  author = {Rennie, Nicola},
+  title = {Creating typewriter-styled maps in {ggplot2}}, 
+  date = {2023-09-30},
+  url = {https://nrennie.rbind.io/blog/creating-typewriter-maps-r/}, 
+  language = {en} 
+}
+
+@online{ryan2024,
+  author = {Ryan, Jadey},
+  title = {Notes from Live Code Review of \{Soils\}},
+  date = {2024-01-22},
+  url = {https://jadeyryan.com/blog/2024-01-22_package-review},
+  langid = {en}
+}
+
+  @online{navarro2022,
+  author = {Navarro, Danielle},
+  title = {Using {Amazon} {S3} with {R}},
+  date = {2022-03-17},
+  url = {https://blog.djnavarro.net/using-aws-s3-in-r},
   langid = {en}
 }
